--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -1,4 +1,158 @@
-html, body {
+
+/* body 
+{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background: #000;
+} */
+
+.container {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2px;
+  flex-wrap: wrap;
+  overflow: hidden;
+}
+
+.signup,
+.signin {
+  /* position: absolute; */
+  width: 400px;
+  background: #222;  
+  z-index: 1000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 40px;
+  border-radius: 4px;
+  box-shadow: 0 15px 35px rgba(0,0,0,9);
+}
+
+.signup .content,
+.signin .content {
+  position: relative;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 40px;
+}
+
+.signup .content h2,
+.signin .content h2 {
+  font-size: 2em;
+  color: #0f0;
+  text-transform: uppercase;
+}
+
+.signup .content form,
+.signin .content form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+}
+
+.signup .content form .inputBox,
+.signin .content form .inputBox {
+  position: relative;
+  width: 100%;
+}
+
+.signup .content form .inputBox input, 
+.signin .content form .inputBox input {
+  position: relative;
+  width: 100%;
+  background: #333;
+  border: none;
+  outline: none;
+  padding: 25px 10px 7.5px;
+  border-radius: 4px;
+  color: #fff;
+  font-weight: 500;
+  font-size: 1em;
+}
+
+.signup .content form .inputBox .required, 
+.signin .content form .inputBox .required {
+  color: red;
+}
+
+.signup .content form .inputBox i,
+.signin .content form .inputBox i {
+  position: absolute;
+  left: 0;
+  padding: 15px 10px;
+  font-style: normal;
+  color: #aaa;
+  transition: 0.5s;
+  pointer-events: none;
+}
+
+.signup .content form .inputBox input:focus ~ i,
+.signup .content form .inputBox input:valid ~ i,
+.signin .content form .inputBox input:focus ~ i,
+.signin .content form .inputBox input:valid ~ i {
+  transform: translateY(-7.5px);
+  font-size: 0.8em;
+  color: #fff;
+}
+
+.signup .content form .links,
+.signin .content form .links {
+  position: relative;
+  width: 100%;
+  display: flex;
+}
+
+.signup .content form .links {
+  justify-content: center;
+}
+
+.signin .content form .links {
+  justify-content: space-between;
+}
+.signup .content form .links a,
+.signin .content form .links a {
+  color: #fff;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.signin .content form .links a:nth-child(2) {
+  color: #0f0;
+  font-weight: 600;
+}
+
+.signup .content form .inputBox input[type="submit"],
+.signin .content form .inputBox input[type="submit"] {
+  padding: 10px;
+  background: #0f0;
+  color: #000;
+  font-weight: 600;
+  font-size: 1.35em;
+  letter-spacing: 0.05em;
+  cursor: pointer;
+}
+
+input[type="submit"]:active {
+  opacity: 0.6;
+}
+
+.hide {
+  display: none;
+}
+
+
+
+/* html, body {
   height: 100%;
 }
 
@@ -82,4 +236,4 @@ button:hover {
 
 .input-container {
   margin-top: 31px;
-}
+} */
