--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,4 +1,72 @@
-<div class="login-page">
+<!-- <div class="container"> -->
+  <div [ngClass]="isSignupShown() ? 'signin hide' : 'signin'"> 
+    <div class="content"> 
+      <h2>Sign In</h2> 
+      <form class="form" [formGroup]="signinForm" (ngSubmit)="onSignin()"> 
+        <div class="inputBox"> 
+          <!-- <label for="username">Username</label> -->
+          <input type="text" id="signinEmail" name="signinEmail" formControlName="signinEmail" required> <i>Email</i>
+          @if (signupForm.get('signinEmail')?.invalid && (signupForm.get('signinEmail')?.dirty || signupForm.get('signinEmail')?.touched)) {
+            <span class="required">Email required</span>
+          }
+        </div> 
+        <div class="inputBox"> 
+          <input type="password" id="signinPassword" name="signinPassword" formControlName="signinPassword" required> <i>Password</i>
+          @if (signupForm.get('signinPassword')?.invalid && (signupForm.get('signinPassword')?.dirty || signupForm.get('signinPassword')?.touched)) {
+            <span class="required">Password required</span>
+          }
+        </div> 
+        <div class="links"> <a href="#">Forgot Password</a> <a (click)="onClickSignup($event)">Signup</a> 
+        </div> 
+        <div class="inputBox"> 
+          <input type="submit" value="Login"> 
+        </div> 
+      </form> 
+    </div> 
+  </div> 
+  <div [ngClass]="!isSignupShown() ? 'signup hide' : 'signin'">
+    <div class="content">
+      <h2>Sign Up</h2> 
+      <form class="form" [formGroup]="signupForm" (ngSubmit)="onSignup()">
+        <div class="inputBox"> 
+          <!-- <label for="username">Username</label> -->
+          <input type="text" id="signupUsername" name="signupUsername" formControlName="signupUsername" required> <i>Username</i>
+          @if (signupForm.get('signupUsername')?.invalid && (signupForm.get('signupUsername')?.dirty || signupForm.get('signupUsername')?.touched)) {
+            <span class="required">Username required</span>
+          }
+        </div> 
+        <div class="inputBox"> 
+          <!-- <label for="username">Username</label> -->
+          <input type="text" id="signupEmail" name="signupEmail" formControlName="signupEmail" required> <i>Email</i> 
+          @if (signupForm.get('signupEmail')?.invalid && (signupForm.get('signupEmail')?.dirty || signupForm.get('signupEmail')?.touched)) {
+            <span class="required">Email required</span>
+          }
+        </div> 
+        <div class="inputBox"> 
+          <input type="password" id="signupPassword" name="signupPassword" formControlName="signupPassword" required> <i>Password</i>
+          @if (signupForm.get('signupPassword')?.invalid && (signupForm.get('signupPassword')?.dirty || signupForm.get('signupPassword')?.touched)) {
+            <span class="required">Password required</span>
+          }
+        </div> 
+        <div class="inputBox"> 
+          <input type="password" id="signupConfirmPassword" name="signupConfirmPassword" formControlName="signupConfirmPassword" required> <i>Confirm Password</i>
+          @if (signupForm.get('signupConfirmPassword')?.invalid && (signupForm.get('signupConfirmPassword')?.dirty || signupForm.get('signupConfirmPassword')?.touched)) {
+            <span class="required">Password required</span>
+          }
+        </div> 
+        <div class="links"><a (click)="onClickBack($event)">Back to Sign In</a> 
+        </div> 
+        <div class="inputBox"> 
+          <input type="submit" value="Let's Go!"> 
+        </div> 
+      </form>
+    </div>
+  </div>
+<!-- </div> -->
+
+
+
+<!-- <div class="login-page">
     <div class="login-panel">
       <img src="pad.svg" alt="a magic hat">
       <h1>Gamer Finder</h1>
@@ -18,4 +86,4 @@
       </form>
     </div>
     <div class="side-panel"></div>
-</div>
+</div> -->
