--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,12 +1,16 @@
 <aside class="sidebar" [class.open]="isOpen()" #sidebar >
   <div class="profile-picture">
-    <app-profile-icon class="profile-picture" />
+    <img src="{{userProfilePicture}}" alt="">
+    <!-- <app-profile-icon class="profile-picture" /> -->
   </div>
   <div class="username">Username</div>
   <div class="separation"></div>
   <nav class="menu">
     <ul>
-      <li><a><app-user-icon class="user-icon" /> Profile</a></li>
+      <li><a (click)="onClickProfile()">
+        <mat-icon aria-hidden="false" aria-label="button to profile" fontIcon="person" class="icon"></mat-icon>
+        Profile</a>
+      </li>
       <li><a>test</a></li>
       <li><a>test</a></li>
       <li><a>test</a></li>
